tests/machine/x/st/order_by_map.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:58Z
"
| data sorted |
data := {Dictionary from:{'a'->1. 'b'->2}. Dictionary from:{'a'->1. 'b'->1}. Dictionary from:{'a'->0. 'b'->5}}.
sorted := [ | tmp |
  tmp := OrderedCollection new.
  data do: [:x |
    tmp add: x.
  ].
  tmp := tmp asSortedCollection: [:a :b | Dictionary from:{'a'->a at: 'a'. 'b'->a at: 'b'} < Dictionary from:{'a'->b at: 'a'. 'b'->b at: 'b'}].
  tmp
] value.
Transcript show: (sorted) printString; cr.
